# coxeter-diagrams

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
includes/: adjmat.hpp  diagram.hpp  label.hpp  rational.hpp
src/: diagram.cpp  label.cpp  main.cpp  rational.cpp
